--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -135,20 +135,10 @@ section {
 
 section img {
     max-height: 200px;
+    margin-bottom: 20px;
 }
 
-#search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#social-media-marketing h2 {
-    margin-bottom: 20px;
+section h2 {
     font-size: 36px;
 }
 
