--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -86,17 +86,7 @@ aside {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
+.lead, .brand, .cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -106,19 +96,7 @@ h3 {
     text-align: center;
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.lead img, .brand img, .cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
