--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,9 +54,11 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+}
+
+.hero img {
+    height: 100%;
+    width: 100%;
 }
 
 .float-left {
@@ -111,7 +113,7 @@ main section {
     color: #ffffff;
 }
 
-section img {
+main section img {
     max-height: 200px;
     margin-bottom: 20px;
 }
